--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,46 @@
+arrow==0.14.6
+asn1crypto==0.24.0
+autopep8==1.4.4
+bcrypt==3.1.7
 beautifulsoup4==4.8.0
 certifi==2019.6.16
+cffi==1.12.3
 chardet==3.0.4
+croniter==0.3.30
+cryptography==2.7
 Cython==0.29.13
-Django==2.2.4
+Django==2.2.8
+django-cronman==1.1.1
+django-kronos==1.0
+fabric==2.5.0
 goodreads==0.3.2
+gunicorn==19.9.0
 idna==2.8
 IMAPClient==2.1.0
+invoke==1.3.0
 lxml==4.4.0
 MechanicalSoup==0.11.0
 nose==1.3.7
 numpy==1.17.0
+pandas==0.25.1
+paramiko==2.6.0
+pep8==1.7.1
 pocket-api==0.1.5
 pyamex==0.2.1
+pycodestyle==2.5.0
+pycparser==2.19
+PyNaCl==1.3.0
+python-crontab==2.3.8
+python-dateutil==2.8.0
+python-decouple==3.1
 pytz==2019.2
 rauth==0.7.3
+redis==3.3.8
+redis-timeseries==0.1.9
 requests==2.22.0
 six==1.12.0
 soupsieve==1.9.2
 sqlparse==0.3.0
+typing==3.7.4.1
 urllib3==1.25.3
 xmltodict==0.12.0
-python-decouple
-gunicorn
-pandas
-redis
-redis_timeseries
-arrow
-pep8
